@@ -246,7 +246,7 @@ extern char *xstrdup PARAMS ((const char *)) ATTRIBUTE_MALLOC;
 
 extern PTR xmemdup PARAMS ((const PTR, size_t, size_t)) ATTRIBUTE_MALLOC;
 
-/* Physical memory routines.  */
+/* Physical memory routines.  Return values are in BYTES.  */
 extern double physmem_total PARAMS ((void));
 extern double physmem_available PARAMS ((void));
 
